# fastapi-tdd-docker

./: .gitignore  AZURE_AUTH.md  AZURE_AUTH_GUIDE.md  AZURE_CONTAINER_AUTHENTICATION_FLOW.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_ROLES_SETUP.md  AZURE_TOKEN_GUIDE.md  CI-CD-SETUP.md  DEPLOY.md  DESTROY-INFRASTRUCTURE.md  README.md  SECURITY_STATUS.md  TESTING_AZURE_AUTH.md  azure.yaml  docker-compose.prod.test.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  destroy-infrastructure.yml  pr-validation.yml
frontend/: .env.example  Dockerfile  Dockerfile.azure  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
infra/app/: database-container.bicep  frontend.bicep  web.bicep
project/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  generate_test_token.py  pyproject.toml  requirements.txt  test_azure_auth.py
project/app/: auth.py  azure.py  config.py  db.py  main.py
project/app/api/: auth_testing.py  auth_validation.py  crud.py  summaries.py  users.py
project/app/models/: pydantic.py  tortoise.py
project/migrations/models/: 1_20251120190712_add_user_model.py  2_20251124194417_update.py
project/tests/: conftest.py  test_auth.py  test_auth_helpers.py  test_azure_jwt_auth.py  test_summaries.py  test_users.py
project/tests/utils/: azure_jwt_mock.py
scripts/: lint.sh  setup-github-actions.sh
(+10 files in other folders)
