[project]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = "FastAPI TDD Docker project with async database support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "pydantic-settings==2.8.1",
    "uvicorn[standard]==0.34.1",
    "asyncpg==0.30.0",
    "tortoise-orm==0.25.0",
    "aerich[toml]==0.8.2",
    "httpx==0.28.1",
    "gunicorn==22.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]
dev = [
    "isort==6.0.1",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
